// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TrackCardContentComponent should match snapshot, for claims 1`] = `
<div>
  <div
    aria-hidden="true"
    class="no-display"
    id="mock-accessibleId"
    role="region"
    tabindex="-1"
  >
    <div>
      FooBar ClaimsComponent
    </div>
  </div>
</div>
`;

exports[`TrackCardContentComponent should match snapshot, for connection 1`] = `
<div>
  <div
    aria-hidden="true"
    class="no-display"
    id="mock-accessibleId"
    role="region"
    tabindex="-1"
  >
    <div>
      FooBar ConnectionComponent
    </div>
  </div>
</div>
`;
